Added fadeIn/Out for result, changed some text from outline to shadow

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,10 @@
 
 .boxed {
   border: 2px solid #0047b2;
-  padding: 0;
-  margin: 0;
 }
 
 .question {
-  /*margin-top: 20px;*/
   padding: 0;
-  margin: 0;
   width: 100%;
 }
 
@@ -42,6 +38,7 @@
 h4 {
   color: white;
   background: #0047b2;
+  text-shadow: black 0.1em 0.1em 0.2em;
   padding: 10px;
   margin: 0;
 }
@@ -59,5 +56,5 @@ button {
 
 label {
   color: white;
-  text-shadow: -1px 0 #494949, 0 1px #494949, 1px 0 #494949, 0 -1px #494949;
+  text-shadow: black 0.1em 0.1em 0.2em;
 }
